--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/alpinejs": "^0.4.9",
     "@tailwindcss/vite": "^4.1.13",
     "astro": "5.13.9",
+    "dotenv": "^17.2.3",
     "swiper": "^12.0.2",
     "tom-select": "^2.4.3"
   },
