--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 CLOUDINARY_CLOUD_NAME=marvinschmidtcodes
 PUBLIC_PAGE_URL=https://marvin-schmidt-codes.netlify.app
+PUBLIC_CONTACT_EMAIL=ms.qed.commcerce@gmail.com
