--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 CLOUDINARY_CLOUD_NAME=marvinschmidtcodes
 PUBLIC_PAGE_URL=https://marvin-schmidt-codes.netlify.app
 PUBLIC_CONTACT_EMAIL=ms.qed.commcerce@gmail.com
+PUBLIC_INSTAGRAM_LINK=https://www.instagram.com/marvincschmidt
 IG_ACCESS_TOKEN="xxx"
 IG_USER_ID="xxx"
